# tarot-ai

./: .gitignore  README.md  index.html  main.py  pyproject.toml  render.yaml
backend/: app.py  main.py  utils.py
backend/app/: utils.py
backend/app/constants/: ai_prompts.py  cards.py  reader_styles.py
backend/app/models/: reading.py
backend/app/routes/: __init__.py  audio.py  image.py  reading.py
backend/app/services/: image_service.py  langfuse_service.py  openai_service.py  reading_service.py  supabase_service.py
evals/: .gitignore  requirements.txt
evals/results/: analysis_report_20241120_123518.md  eval_results_20241120_123304.json
evals/src/: analyze_results.py  evaluator.py  main.py
evals/src/data/: card_meanings.json
frontend/: package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  styles.css
frontend/src/components/: CardDisplay.js  DrawButton.js  Header.js  InputSection.js  MessageBubble.js
frontend/src/utils/: api.js
src/: models.py
src/components/: DrawButton.js  Header.js  InputSection.js  MessageBubble.js  TarotChat.js
src/constants/: messages.js  reflections.py
src/hooks/: useCard.js  useMessages.js
src/routes/: audio.py  image.py  reading.py
src/services/: image_service.py  openai_service.py
src/styles/: main.css
static/: script.js  style.css
