[tool.poetry]
name = "tarot-ai"
version = "0.1.0"
description = ""
authors = ["radicalpanda"]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "0.115.5"
openai = "1.54.4"
uvicorn = "0.32.0"
python-dotenv = "1.0.0"
pydantic = "2.9.2"
python-multipart = "^0.0.17"
langfuse = "^2.6.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
