[tool.poetry]
name = "tarot-ai"
version = "0.1.0"
description = "AI-powered Tarot reading application"
authors = ["Matt A <abbostore@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
openai = "^1.3.0"
langfuse = "^2.6.2"
pydantic = "^2.4.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"